[package]
name = "content"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "./RustedToolbox/client"}
server = { path = "./RustedToolbox/server"}
shared = { path = "./RustedToolbox/shared"}

[[bin]]
name = "server"
path = "./server/main.rs"

[[bin]]
name = "client"
path = "./client/main.rs"